CHinhr sua file show_product.html

--- a/show_product.html
+++ b/show_product.html
@@ -9,5 +9,8 @@
     <h1>
         Trang hien tho dang sach san pham
     </h1>
+    <div>San pham 1</div>
+    <div>San pham 2</div>
+    <div>San pham 3</div>
 </body>
 </html>
